# FastAPIMongoLaunchpad

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
app/: Dockerfile  main.py  pyproject.toml  pytest.ini
app/server/: server.py
app/tests/: conftest.py  test_health.py
