[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "fastapi-mongo-base>=0.12.8",
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
